--- a/src/main/resources/assets/hzdslib/lang/en_US.lang
+++ b/src/main/resources/assets/hzdslib/lang/en_US.lang
@@ -1,2 +1,6 @@
 death.hzdslib.radiation=%1$s killed by radiation sickness.
 death.hzdslib.radiation_dd=%1$s catched lethal dose of radiation.
+
+item.antirad.name=Antirad
+item.radiation_detector.name=Geiger Counter
+item.debug_radgiver.name=Debug Radiation Giver
